--- a/public/tb/trend.html
+++ b/public/tb/trend.html
@@ -29,14 +29,14 @@
     {
       var key;
 
-      key = "Select_Chart_Vals_By_Query_Id." + query_id;
-      db.If_Not_In_Cache(key, Get_Vals, on_success_fn);
+      key = "Select_Chart_Vals_By_Query_Id_" + query_id;
+      db.If_Not_In_Cache2(key, Get_Vals, Parse_Vals, on_success_fn);
       function Get_Vals()
       {
         tb.trend.Select_By_Query_Id(db, query_id, Select_OK);
         function Select_OK(items)
         {
-          var c, datetime, item_vals, item, vals;
+          var c, item_vals, item, vals;
 
           if (!tb.Empty(items))
           {
@@ -50,9 +50,20 @@
             }
           }
 
-          db.Insert_In_Cache(key, vals);
-          on_success_fn(vals);
+          db.Insert_In_Cache2(key, vals, on_success_fn);
         }
+      }
+      function Parse_Vals(items)
+      {
+        var c, item;
+
+        for (c = 1; c < items.length; c++)
+        {
+          item = items[c];
+          item[0] = new Date(item[0]);
+        }
+
+        return items;
       }
     },
 
