--- a/public/admin.html
+++ b/public/admin.html
@@ -5,6 +5,7 @@
 
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-database.js"></script>
 
   <script type="module">
@@ -115,6 +116,7 @@
     function Main()
     {
       db = new Db();
+      firebase.auth().onAuthStateChanged(Auth_State_Changed);
 
       document.getElementById("add_option").onclick = On_Add_Query;
       document.getElementById("upd_option").onclick = On_Update_All;
@@ -125,6 +127,12 @@
       document.getElementById("qry_edt").on_del_fn = On_Del_Query;
 
       List_Query_Items();
+    }
+
+    function Auth_State_Changed(user)
+    {
+      if (user)
+        console.log("user.id: " + user.uid);
     }
 
     function On_Reindex()
@@ -213,16 +221,32 @@
     {
       var t = this;
 
-      Query.Save(db, query, Update_OK);
-      function Update_OK()
+      query.Save(db, Update_OK);
+      function Update_OK(err)
       {
-        // todo: delete trend data
-        if (t.item_elem != null)
-          Update_Query_Item(t.item_elem, query);
+        if (err)
+        {
+          if (err.code && err.code == "PERMISSION_DENIED")
+            document.getElementById("qry_denied").show();
+          else
+          {
+            if (err.code)
+              document.getElementById("qry_err").text = err.code;
+            else if (err.message)
+              document.getElementById("qry_err").text = err.message;
+            document.getElementById("qry_err").show();
+          }
+        }
         else
-          Insert_Query_Item(document.getElementById("query_items"), query);
+        {
+          // todo: delete trend data
+          if (t.item_elem != null)
+            Update_Query_Item(t.item_elem, query);
+          else
+            Insert_Query_Item(document.getElementById("query_items"), query);
 
-        document.getElementById("qry_ok").show();
+          document.getElementById("qry_ok").show();
+        }
       }
     }
 
@@ -282,6 +306,8 @@
 
   <paper-toast id="msg_ok" text="All trends updated."></paper-toast>
   <paper-toast id="qry_ok" text="Query updated."></paper-toast>
+  <paper-toast id="qry_denied" text="You do not have the appropriate permission."></paper-toast>
+  <paper-toast id="qry_err" text="There was an error."></paper-toast>
   <paper-toast id="trend_del_ok" text="All trend data deleted."></paper-toast>
   <paper-toast id="del_ok" text="Query deleted."></paper-toast>
   <paper-toast id="msg"></paper-toast>
