--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase-database.js"></script>
 
+  <script src="/webcomponentsjs/webcomponents-loader.js"></script>
   <script type="module">
     import '/polymer/paper-icon-button/paper-icon-button.js';
     import '/polymer/iron-icons/iron-icons.js';
@@ -357,7 +358,7 @@
     function Set_Row(dst, row_index, row)
     {
       var dst_row = dst[row_index];
-      dst_row[dst_row.length-1] = row[1];
+      dst_row[dst_row.length - 1] = row[1];
     }
 
     function New_Row(row, required_length)
@@ -368,7 +369,7 @@
       for (i = 0; i < required_length; i++)
         new_row.push(null);
       new_row[0] = row[0]; // insert date
-      new_row[required_length-1] = row[1]; // insert job count
+      new_row[required_length - 1] = row[1]; // insert job count
 
       return new_row;
     }
