--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,11 @@
       height: 90%;
     }
 
+    #curve_chart p
+    {
+      margin: 0px 50px 25px 50px;
+    }
+
     .overlay
     {
       position: fixed;
@@ -403,7 +408,16 @@
         </app-toolbar>
       </app-header>
 
-      <div id="curve_chart">yo hoh oh</div>
+      <div id="curve_chart">
+        <p>Everybody needs buddies. This one is no exception.</p>
+        <p>Every day Trend Buddy takes note of the number of jobs listed for each of the "tech" areas listed on the left.
+        Armed with this information, Trend Buddy can chart the demand for work in these areas. 
+        If you're an IT professional you might find this helpfull for charting your career. 
+        The charts, on their own, are not overly useful but when combined can give us an idea of which technologies are in demand and which are on the way out.</p>
+        <p>Use the green tech list, on the left, to view job charts. 
+        To view a chart relating to a single tech just click on the appropriate tech title. 
+        To view a chart combining several tech charts use the checkboxes.</p>
+      </div>
 
     </app-header-layout>
   </app-drawer-layout>
