--- a/public/index.html
+++ b/public/index.html
@@ -410,10 +410,10 @@
 
       <div id="curve_chart">
         <p>Everybody needs buddies. This one is no exception.</p>
-        <p>Every day Trend Buddy takes note of the number of jobs listed for each of the "tech" areas listed on the left.
-        Armed with this information, Trend Buddy can chart the demand for work in these areas. 
-        If you're an IT professional you might find this helpfull for charting your career. 
-        The charts, on their own, are not overly useful but when combined can give us an idea of which technologies are in demand and which are on the way out.</p>
+        <p>Every day, Trend Buddy takes note of the number of jobs posted for each of the "tech" areas listed on the left.
+        Armed with this information, Trend Buddy can chart the demand for work across these areas. 
+        If, like me, you're an IT professional you might find this information helpful when determining which skills are worth pursuing. 
+        Each chart, individually, is not overly useful but when combined with others can give us some insight into which technologies are in demand and which are on the way out.</p>
         <p>Use the green tech list, on the left, to view job charts. 
         To view a chart relating to a single tech just click on the appropriate tech title. 
         To view a chart combining several tech charts use the checkboxes.</p>
